deploy/snapshots/sglang-1p1d-v2p2d-opt-20260822/svc-sglang-1p1d-decode-1.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.cloud.tencent.com/sync-begin-time: '2026-08-22T14:11:42+08:00'
    service.cloud.tencent.com/sync-end-time: '2026-08-22T14:11:42+08:00'
  labels:
    app.kubernetes.io/component: decode
    app.kubernetes.io/name: sglang-1p1d
    pd-role: decode
  name: sglang-1p1d-decode-1
  namespace: kube-system
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 30000
    protocol: TCP
    targetPort: 30000
  selector:
    app.kubernetes.io/component: decode
    app.kubernetes.io/instance: sglang-1p1d-decode-1
    app.kubernetes.io/name: sglang-1p1d
  sessionAffinity: None
  type: ClusterIP
