deploy/snapshots/sglang-1p1d-v2p2d-opt-20260822/svc-sglang-1p1d-router.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: sglang-1p1d
    meta.helm.sh/release-namespace: kube-system
    service.cloud.tencent.com/sync-begin-time: '2026-07-26T11:28:30+08:00'
    service.cloud.tencent.com/sync-end-time: '2026-07-26T11:28:30+08:00'
  labels:
    app.kubernetes.io/component: router
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sglang-1p1d
  name: sglang-1p1d-router
  namespace: kube-system
spec:
  clusterIP: ROUTER_CLUSTER_IP
  clusterIPs:
  - ROUTER_CLUSTER_IP
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 30001
    protocol: TCP
    targetPort: 30001
  - name: metrics
    port: 19096
    protocol: TCP
    targetPort: 19096
  selector:
    app.kubernetes.io/component: router
    app.kubernetes.io/name: sglang-1p1d
  sessionAffinity: None
  type: ClusterIP
